# Petri

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs  config.ron  imgui.ini  rustfmt.toml
.cargo/: config  config.toml
Assets/: BigSim.preset  DefaultSim.preset  EnergySpawner.prefab  JeffDoBeGoing.cs  JeffJoint.cs  JeffSpawner.cs  JeffSpawner.prefab  New Material.mat  Propulsion.cs  Restitution.physicsMaterial2D  Settings.cs
Assets/Resources/: Bond.prefab  Cell.prefab  CellMaterial.mat  CellSpawner.prefab  Energy.prefab  Food.prefab  FoodSpawner.prefab  Jeff.prefab  JeffSpawner.prefab  Joint.prefab  LineMaterial.mat  Propulsion.prefab  Weapon.prefab
Assets/Scenes/: Main.unity
Assets/Scripts/: Bond.cs  Bounds.cs  CameraControl.cs  Cell.cs  CellSpawner.cs  Energy.cs  EnergySpawner.cs  Food.cs  FoodSpawner.cs  JeffDoBeGoing.cs  JeffSpawner.cs  Propulsion.cs  Settings.cs  Weapon.cs
ProjectSettings/: BurstAotSettings_StandaloneWindows.json  PackageManagerSettings.asset  Physics2DSettings.asset  ProjectSettings.asset  TagManager.asset
assets/shaders/: instancing.wgsl  particle.frag  particle.vert  particles.frag
configs/: 100k.ron  200k.ron  50k.ron  600k.ron  default.ron
src/: app.rs  camera.rs  cell_render.rs  components.rs  config.rs  imgui_wrapper.rs  main copy.rs  main.rs  mesh.rs  particle.frag  particle.vert  particles.frag.spv  particles.vert  particles.vert.spv  pong.rs  render.rs  renderer.rs  shader.wgsl  sim.rs  tri.frag  tri.vert  vec2.rs  window.rs
src/driver/: driver.rs  mod.rs  stats.rs
src/glass/: camera.rs  gui_renderer.rs  imgui_wrapper.rs  mod.rs  renderer.rs  sim_renderer.rs
src/rendering/: camera.rs  cell_renderer.rs  display.rs  framework.rs  gui_renderer.rs  mod.rs  render_driver.rs  sim_renderer.rs
src/rendering/driver/: camera.rs  display.rs  framework.rs  mod.rs
src/rendering/gui_apps/: grid_app.rs  gui_renderer.rs  mod.rs  perf_app.rs  stat_app.rs
src/rendering/gui_renderer/: debug_app.rs  graph_app.rs  grid_app.rs  gui_renderer.rs  mod.rs  perf_app.rs  stat_app.rs
src/rendering/sim_renderer/: camera.rs  mod.rs  sim_renderer.rs  vertex.rs
src/rendering/sim_renderer/shaders/: particles.frag  particles.vert
src/simulation/: components.rs  config.rs  mod.rs  physics.rs  simulation.rs  time.rs
src/simulation/physics/: collision.rs  collision_structures.rs  mod.rs  physics.rs  position_update.rs  spatial_grid.rs
src/simulation/physics/spatial_grid/: README.md  cell.rs  grid.rs  mod.rs  spatial_grid.rs  storage.rs
src/systems/: bounce.rs
src/timing/: mod.rs  registry.rs  timer.rs
