[package]
name = "petri"
version = "0.1.0"
edition = "2021"

[dependencies]
####################
# GUI
####################
winit = "0.28.3"
wgpu = { version = "0.15.1", features = ["glsl"] }
naga = "0.11.0"
egui = "0.21.0"
egui-wgpu = "0.21.0"
egui-winit = "0.21.1"
num-format = "0.4.4"
bytemuck = { version = "1.13.1", features = [ "derive" ] }

####################
# Simulation
####################
fps_counter = "2.0.0"
rayon = "1.7.0"
rand = "0.8.5"
bevy_ecs = "0.9.1"
bevy_tasks = "0.9.1"
futures = "0.3.28"
hdrhistogram = "7.5.2"
lazy_static = "1.4.0"
parking_lot = { version = "0.12.1", features = ["nightly"] }
quanta = "0.11.0"
itertools = "0.10.5"
ron = { version = "0.8.0", features = ["integer128"] }
serde = { version = "1.0.160", features = ["derive"] }
ultraviolet = { version = "0.9.1", features = ["serde", "int"]}

[profile.dev.package."*"]
opt-level = 3

# Maximum optimization for release builds
[profile.release]
lto = "thin"
panic = "abort"
incremental = false